[package]
name = "behavior-tree"
version = "0.1.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.17"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = "0.8"
tokio-stream = "0.1"
futures-core = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
simple-xml-builder = "1.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v1", "std", "rng"] }
url = "2.2"
actify = "0.1.0"

[features]
default = [] 
websocket = [] # add specific dependencies only required for the websocket connector