[package]
name = "behavior-tree"
version = "0.1.38"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
anyhow = "1.0"
thiserror = "2.0.12"
simple-xml-builder = "1.1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v1", "std", "rng"] }
url = "2.2"
actify = { git = "https://github.com/AvalorAI/actify", tag = "v0.6.0" }

[features]
default = []
websocket = []
